--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,32 @@
 header {
+    display: flex;
+    justify-content: center;
     font-style:normal;
-    font-size: 55px;
+    font-size: 80px;
+    font-weight: bold;
     color: white;
 
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
 }
 
 a:link {
     color: white;
+    display: flex;
+    justify-content: center;
 }
 
 a:visited {
     color: white;
+    display: flex;
+    justify-content: center;
 }
 
 body {
-    background-image: url(../img/Varberg.JPG);
+    background-image: url(../img/IMG_3013.JPG);
     background-size: cover;
     background-attachment: fixed;
 }
@@ -22,13 +34,18 @@ body {
 #wrapper {
     display: flex;
     justify-content: center;
-    width: 500px;
-    height: 300px;
 
-    font-size: larger;
+    font-size:x-large;
     color: black;
     
-    margin-top: 10%;
-
-    background: rgba(243, 241, 241, 0.727);
+    margin-top: 30px;
 }
+
+.main {
+    background: rgba(240, 104, 58, 0.5);
+    width: 600px;
+}
+
+
+
+
